--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,10 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: ubuntu-22.04
+          - runner: ubuntu-latest
             target: x86_64
           - runner: ubuntu-22.04
-            target: aarch64
+            target: x86_64
         python-version: ["3.10", "3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
@@ -53,38 +53,12 @@ jobs:
           pip install stumpy
           pytest -v tests/test_correctness_cpu.py
 
-  windows:
-    runs-on: self-hosted
-    strategy:
-      matrix:
-        platform:
-          - runner: windows-latest
-            target: x64
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          architecture: ${{ matrix.platform.target }}
-      - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
-          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-windows-${{ matrix.platform.target }}}-py${{ matrix.python-version }}
-          path: dist
-
   macos:
     runs-on: self-hosted
     strategy:
       matrix:
         platform:
-          - runner: macos-14
+          - runner: macos-15
             target: aarch64
         python-version: ["3.10", "3.11", "3.12", "3.13"]
     steps:
@@ -123,7 +97,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
-    needs: [linux, windows, macos, sdist]
+    needs: [linux, macos, sdist]
     permissions:
       # Use to sign the release artifacts
       id-token: write
