--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --find-interpreter
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+          rustup-components: "rust-src rustc-dev llvm-tools"
           manylinux: auto
       - name: Upload wheels
         uses: actions/upload-artifact@v4
@@ -72,6 +73,7 @@ jobs:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --find-interpreter
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+          rustup-components: "rust-src rustc-dev llvm-tools"
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
