--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,9 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: ubuntu-latest
-            target: x86_64
           - runner: ubuntu-22.04
             target: x86_64
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.13"]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -54,31 +52,31 @@ jobs:
           pip install stumpy
           pytest -v tests/test_correctness_cpu.py
 
-  macos:
-    runs-on: self-hosted
-    strategy:
-      matrix:
-        platform:
-          - runner: macos-15
-            target: aarch64
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
-          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-          rustup-components: "rust-src rustc-dev llvm-tools"
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-macos-${{ matrix.platform.target }}}-py${{ matrix.python-version }}
-          path: dist
+  # macos:
+  #   runs-on: self-hosted
+  #   strategy:
+  #     matrix:
+  #       platform:
+  #         - runner: macos-15
+  #           target: aarch64
+  #       python-version: ["3.11", "3.12", "3.13"]
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: actions/setup-python@v5
+  #       with:
+  #         python-version: ${{ matrix.python-version }}
+  #     - name: Build wheels
+  #       uses: PyO3/maturin-action@v1
+  #       with:
+  #         target: ${{ matrix.platform.target }}
+  #         args: --release --out dist --find-interpreter
+  #         sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+  #         rustup-components: "rust-src rustc-dev llvm-tools"
+  #     - name: Upload wheels
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: wheels-macos-${{ matrix.platform.target }}}-py${{ matrix.python-version }}
+  #         path: dist
 
   sdist:
     runs-on: self-hosted
