--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,11 @@ jobs:
     strategy:
       matrix:
         platform:
+          - runner: ubuntu-latest
+            target: x86_64
           - runner: ubuntu-22.04
             target: x86_64
-        python-version: ["3.13"]
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -52,31 +54,35 @@ jobs:
           pip install stumpy
           pytest -v tests/test_correctness_cpu.py
 
-  # macos:
-  #   runs-on: self-hosted
-  #   strategy:
-  #     matrix:
-  #       platform:
-  #         - runner: macos-15
-  #           target: aarch64
-  #       python-version: ["3.11", "3.12", "3.13"]
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-python@v5
-  #       with:
-  #         python-version: ${{ matrix.python-version }}
-  #     - name: Build wheels
-  #       uses: PyO3/maturin-action@v1
-  #       with:
-  #         target: ${{ matrix.platform.target }}
-  #         args: --release --out dist --find-interpreter
-  #         sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-  #         rustup-components: "rust-src rustc-dev llvm-tools"
-  #     - name: Upload wheels
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: wheels-macos-${{ matrix.platform.target }}}-py${{ matrix.python-version }}
-  #         path: dist
+  macos:
+    runs-on: self-hosted
+    strategy:
+      matrix:
+        platform:
+          - runner: macos-15
+            target: aarch64
+        python-version: ["3.11", "3.12", "3.13"]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install libxcb
+        run: |
+          brew install libxcb
+          brew link --force libxcb
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist -i python${{ matrix.python-version }}
+          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+          rustup-components: "rust-src rustc-dev llvm-tools"
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-macos-${{ matrix.platform.target }}}-py${{ matrix.python-version }}
+          path: dist
 
   sdist:
     runs-on: self-hosted
@@ -97,7 +103,7 @@ jobs:
     name: Release
     runs-on: self-hosted
     if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
-    needs: [linux, sdist]
+    needs: [linux, macos, sdist]
     permissions:
       # Use to sign the release artifacts
       id-token: write
