--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: macos-15
+          - runner: macos-latest
             target: aarch64
         python-version: ["3.11", "3.12", "3.13"]
     steps:
@@ -67,6 +67,8 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install Homebrew
+        run: bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
       - name: Install libxcb
         run: |
           brew install libxcb
