--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   linux:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         platform:
@@ -55,7 +55,7 @@ jobs:
           pytest -v tests/test_correctness_cpu.py
 
   macos:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         platform:
@@ -87,7 +87,7 @@ jobs:
           path: dist
 
   sdist:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Build sdist
@@ -103,7 +103,7 @@ jobs:
 
   release:
     name: Release
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
     needs: [linux, macos, sdist]
     permissions:
